# OpenEnv-Project

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train_openenv_agent.py
agents/: __init__.py  baseline_agent.py  optimal_agent.py
environment/: __init__.py  env.py  models.py
graders/: __init__.py  agent_graders.py
server/: app.py
tasks/: __init__.py  easy.yaml  easy_task.py  hard.yaml  hard_task.py  medium.yaml  medium_task.py
